deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metallica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metallica
  template:
    metadata:
      labels:
        app: metallica
    spec:
      containers:
        - name: metallica
          image: bwerquin/metallica:latest
