ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metallica
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - metallica.dev.insee.io
  rules:
    - host: metallica.dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: metallica
              servicePort: http
